prevent text bleeding in btn-on

--- a/src/components/ImageLinkForm/ImageLinkForm.css
+++ b/src/components/ImageLinkForm/ImageLinkForm.css
@@ -1,4 +1,15 @@
 .input-button {
   background-color: rgba(0, 0, 0, 0.1);
+}
 
+
+@media only screen and (max-width: 600px) {
+  .btn-go {
+    font-size: 12px;
+
+  }
+  .btn-go > span {
+    display: flex;
+    justify-content: center;
+  }
 }
